hard-gists/2620876/run.log
=== Docker Run Log for 2620876 ===
Started at: Mi 29. Okt 13:09:55 CET 2025

[2025-10-29 13:09:56] START: Running container for 2620876
[2025-10-29 13:09:56] SUCCESS: Container 494b9a0dd85502d5a54dc83ae16deb7121f6ac96f1d3bc11a5214acfce48c58a started for 2620876
=== Container logs for 2620876 ===
  File "/snippet.py", line 46
    print "\nFAILURE:"
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2620876 ===
[2025-10-29 13:09:58] INFO: Container 494b9a0dd85502d5a54dc83ae16deb7121f6ac96f1d3bc11a5214acfce48c58a has stopped
